made use of earlier nav from git to remove the flickering issue from the navbar

--- a/src/style.css
+++ b/src/style.css
@@ -348,3 +348,7 @@ section.heroku {
   margin-inline: auto;
   width: min(90%, 36rem);
 }
+
+/* .navbarlist > * {
+  justify-content: end;
+} */
